--- a/pages/mnemofs/lru.mdx
+++ b/pages/mnemofs/lru.mdx
@@ -21,8 +21,7 @@ And the below is a kernel list.
 
 ![kl](https://res.cloudinary.com/dbzi2yvvc/image/upload/v1720435871/mnemofs/Screenshot_20240708_162053_rjxu4o.png)
 
-The type `struct list_head` contains only pointers to other `struct list_head`. It doesn't care about the structure it is part of. This can allow traversal, and conversion of any knd of structure
-we want into a list. The question is, if we have a pointer, how do we get the original structure back?
+The type `struct list_head` contains only pointers to other `struct list_head`. It doesn't care about the structure it is part of. This can allow traversal, and conversion of any kind of structure we want into a list. The question is, if we have a pointer, how do we get the original structure back?
 
 The answer to that is pretty simple and brilliant. Pointer offsets. If your struct `struct my_struct` contains a member `struct list_head list`, then, let's say, the offset of `list` from the start of the struct is `off`, then if we have an address `x` pointing to `list`, we can get its parent by just doing `x - off`. `off` will always remain constant for a given struct, and there are utilities provided to calculate them. In fact, the list utilities don't require you to even have to think too much about how this works.
 
@@ -52,9 +51,9 @@ The smaller the LRU is configured, the lesser you will lose after a power loss.
 
 When it's time to update convert the deltas into actual data on the flash, it's pretty complicated. The first task is to determine what _doesn't_ need to change. If a file takes up blocks `a, b, c, d` and if the block c has some deltas, then the new blocks have to be like `a, b, x, y` due to CoW. Thus, the "prefix" needs to be determined, which, in this case, is `a, b` blocks.
 
-Now, we need to apply all updates contained in the deltas over such a file. Due to the limitation of the types of deltas, this gets much simplified into a two pointer method, where the upper limiter of the window shifts inwards by `x` bytes for every deletion that shifts `x` bytes **inside** the window. It might shift `x + y` bytes in total, where `y` bytes fall outside the window. The way this two pointer window algorithm works, `y` will not be lower than the minium limiter of the window, but rather, can only be higher that the upper limiter. We do not care about this, as the next iteration will take care of it. Also, we increment a deleted bytes counter...say `del`...by `x` to denote how many bytes have been deleted **before** the start of the window. So, then, if we are considering a window `x, x + m` in the new file, then we need to copy the bytes `x + del, x + m + del` from the old file. This way `del` marks the amount of "compensation" we need to provide.
+Now, we need to apply all updates contained in the deltas over such a file. Due to the limitation of the types of deltas, this gets much simplified into a two pointer method, where the upper limiter of the window shifts inwards by `x` bytes for every deletion that shifts `x` bytes **inside** the window. It might shift `x + y` bytes in total, where `y` bytes fall outside the window. The way this two pointer window algorithm works, `y` will not be lower than the minimum limiter of the window, but rather, can only be higher that the upper limiter. We do not care about this, as the next iteration will take care of it. Also, we increment a deleted bytes counter...say `del`...by `x` to denote how many bytes have been deleted **before** the start of the window. So, then, if we are considering a window `x, x + m` in the new file, then we need to copy the bytes `x + del, x + m + del` from the old file. This way `del` marks the amount of "compensation" we need to provide.
 
-After the window reaches the end of updates, it's time to save this new location in our journal.
+After the window reaches the end of updates, it's time to save this new                                         location in our journal.
 
 ---
 
