--- a/pages/mnemofs/mnemofs.mdx
+++ b/pages/mnemofs/mnemofs.mdx
@@ -1,11 +1,6 @@
-import { Cards, Card } from 'nextra/components'
-
-export let prev = "/mnemofs/intro_p3";
-export let next = "/mnemofs/lru";
-
 # mnemofs
 
-Mnemofs is a NAND Flash File System designed and built for NuttX as part of the [Google Summer of Code 2024 program](https://lists.apache.org/thread/vnlyzosgp3rbc9jqf64np126rjhntmrq). Mnemofs is designed to be a middle ground between flash storage consumption, memory consumption, wear and speed. It sacrifices a little bit of everything, and ends up being acceptably good in all of them, instead of sacrificing multiple aspects, and being good in one.
+Mnemofs is a NAND Flash File System designed and built for NuttX as part of the [Google Summer of Code 2024 program](https://lists.apache.org/thread/vnlyzosgp3rbc9jqf64np126rjhntmrq). Mnemofs is designed to take a middle ground between flash storage consumption, memory consumption, wear and speed. It sacrifices a little bit of everything, and ends up being acceptably good in all of them, instead of sacrificing multiple aspects, and being good in one.
 
 Mnemofs consists of several components, and thus, we approach it one by one. Baby steps.
 
@@ -19,11 +14,6 @@ Here are the blogs that cover this in depth:
 - [Mnemofs Journal](./journal)
 - [Mnemofs Master Node](./mn)
 - [Mnemofs Block Allocator](./ba)
-- [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blogs](./mideval)
+- [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blogs](../coming_soon)
 
----
-
-<Cards>
-<Card icon="❰&emsp;" title="Part III" href={prev} />
-<Card icon="❱&emsp;" title="Mnemofs LRU" href={next} />
-</Cards>
+The journey to design and implement this wasn't smooth sailing, and required modifications pretty frequently to either make the FS faster in some respect, or to patch up gaping holes in its logic. All of this will be covered in the [mid term](../coming_soon) and [end term](../coming_soon) blogs for my time as a GSoC Contributor for Apache NuttX.
