--- a/pages/mnemofs/ba.mdx
+++ b/pages/mnemofs/ba.mdx
@@ -2,7 +2,7 @@ import { Cards, Card } from 'nextra/components'
 
 export let prev = "/mnemofs/mn";
 export let home = "/";
-export let next = "/coming_soon";
+export let next = "/mnemofs/mideval";
 
 # Mnemofs's Block Allocator
 
