--- a/pages/mnemofs/mideval.mdx
+++ b/pages/mnemofs/mideval.mdx
@@ -1,10 +1,60 @@
-import { Cards, Card } from 'nextra/components'
+import { Cards, Callout, Card } from 'nextra/components'
 
 export let prev = "/mnemofs/mn";
 export let home = "/";
 export let next = "/coming_soon";
 
-# GSoC '24 @ Apache NuttX, Mid Term Evaluation Blog
+# Google Summer of Code '24 @ Apache NuttX, Mid Term Evaluation Blog
+
+Hi! I am Saurav Pal, a recent graduate, and a regular passionate developer interested in systems and anything low level, and I welcome you to my blog that covers my journey as a Google Summer of Code (GSoC) Contributor for Apache NuttX in 2024, right from the very start to the very end. My project involves designing and implementing mnemofs, a NAND Flash File System for Apache NuttX.
+
+<Callout type="info" emoji="ℹ️">
+Disclaimer: Contains a lot of rants and yapping.
+</Callout>
+
+## Pre-GSoC
+
+### Pre-Apache NuttX Period
+
+Before the GSoC period, I was looking into Linux, trying to get started as a contributor. But first, I needed to have a fair understanding of how the whole thing works. Baby steps, you know. Read the famous [Robert Love's book](http://www.doc-developpement-durable.org/file/Projets-informatiques/cours-&-manuels-informatiques/Linux/Linux%20Kernel%20Development,%203rd%20Edition.pdf), saw a lot of videos, and of course, tried to read the codebase.
+
+It was overwhelming, and it was stressful, because... I mean, just look at Linux's codebase **and** its history. I was also interested in embedded systems, but I was trying to do one thing at a time. While I was going through the codebase, I was hooked on to the history of file systems in the codebase. You could see new file systems appear and some old ones disappear every few versions. Over that, I had heard file systems are the lowest in the whole tree, and are kind of only dependent on the Virtual File System and whatever the storage driver is, and that too that file system developers do not need to worry too much about the storage device (as long as it's of the same technology, but I didn't know this then), or the internals of the OS.
+
+So, I felt file systems would be a great starting point. Started reading the codebases of the various file systems. After 3-4 file systems, all of them seem to swim in front of my eyes, and feel the same, and concepts from one FS seemed to merge with concepts from another FS 🫠. Still, carried on, as I knew if I try to read it repeatedly, it will start making sense someday. Every line of C makes sense, as mostly nothing is really hidden away, and more so in the case of OS codebases. If it were a higher level language, I would have just probably given up, idk.
+
+I wanted to apply for GSoC once again for 2024, and this time, for a large project (I had done a medium project in 2023). Around this time, I thought of looking into any OS related projects that are available, as those align with my interests. Found Apache NuttX. What does NuttX and the project I found have in common with my interests? Everything! File System + Operating System + Embedded Systems. All my boxes ticked, and a match made in heaven, at least from my side 😉.
+
+### First PR
+
+So, I decided to look into Apache NuttX, and try to understand it. I tried looking into good first issues, but honestly, I was just too optimistic at that point and even the scant few first issues were very advanced for the past me. I could succesfully set up NuttX, and build the simulator configuration (I did not have **any** embedded boards, but more on that later).
+
+I did not wish for hand holding, as it's often detrimental to the learning process, but I did wish for a nudge in the right direction. And so I contacted [Alan](https://github.com/acassis) who was listed as a mentor to the project on any kind of resources I could gather. He very generously provided some resources, and suggested I should look into existing FS codebases (like I had done in Linux).
+
+The difference between Linux and NuttX codebases? NuttX codebase looks beautiful. Sure, Linux might look beautiful to the experts, but NuttX looks good even to the newbies like me. A lot of the code is properly documented...each function, what it does, and even sometimes, why it exists.
+
+I looked at the [FAT file system code](https://github.com/apache/nuttx/tree/master/fs/fat). In and of itself, the code isn't too complicated. But NuttX contribution style made a lot of things clear to a someone like me who was mostly stumbling around in the dark, trying to make sense of my surroundings. Finally, while reading the codebase, I came [across a bug](https://github.com/apache/nuttx/pull/11647) that initially I thought was something that I couldn't understand the meaning of. After asking around on the mailing list, I found out that this bug went unnoticed because the particular way the macro was used in the codebase till then made the expansion correct, even if the macro itself was incorrect, and might cause problems if the usage of the macro was modified. So, I patched it, and made my first [Apache NuttX PR](https://github.com/apache/nuttx/pull/11647)!
+
+### More contributions
+
+Alan had mentioned that the FAT file system documentation was a bit lacking and so since I was already looking at the file system, writing it down somewhere would be a good idea, and why not the official documentation :D. So, I researched into FAT FS (or, rather VFAT), and alongside reading the code, I wrote down whatever I learnt, and finally updated the documentation in my [second PR](https://github.com/apache/nuttx/pull/11656).
+
+Now I wanted to move higher in the OS tree. So, I thought about learning about the VFS. Since this VFS shares a lot with Linux's structure, I could apply the VFS resources for Linux here. Along with this, I looked into the codebase, and learnt more about the VFS. Of course, not all of it, but a lot of it. I updated the documentation for the VFS as my [third PR](https://github.com/apache/nuttx/pull/11730).
+
+### NAND Flashes
+
+Around this time, I had received an ordered STM32F401 board. I had ordered this before my interactions with NuttX community and Alan, and it was just a buy-whatever-feels-popular-and-cheap, and I received it late due to my campus's remote location. Suprise! It doesn't have the JTAG programmer, and I need to buy one. Another infinite waiting period for that to get delivered.
+
+I was sick of this wait, and wanted to learn about NAND flashes, and thus, about drivers in NuttX. So my thought process went like this: "I am already using the simulator. Why not simulate NAND Flash in it? I have already seen QEMU simulate chips. If CPUs, why not peripherals." And so, after some headache-filled days, I made my fourth set of PRs ([this](https://github.com/apache/nuttx/pull/11806) and [this](https://github.com/apache/nuttx-apps/pull/2319)) to add a NAND Flash virtual device as an app in the simulator.
+
+This made me learn about both NAND Flashes, as well a lot of insight into drivers work in NuttX. Both are very critical for my understanding, if I am to develop a file system for NuttX.
+
+### Tinkering with my board
+
+### mnemofs
+
+## GSoC Community Bonding Period
+
+## Till Mid Term Evaluation
 
 ---
 
